방언 번역 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ django-bootstrap4
 azure-cognitiveservices-speech
 django-storages
 #azure-storage-blob
+pandas
+numpy
+torch
+transformers
+sentencepiece
+matplotlib
+tqdm
