--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,55 @@
-django
-pillow
-whitenoise
-bootstrap4
-django_forms_bootstrap
-django-bootstrap4
-azure-cognitiveservices-speech
-django-storages
-#azure-storage-blob
-pandas
-numpy
-torch
-transformers
-sentencepiece
-matplotlib
-tqdm
+asgiref==3.7.2
 azure-ai-translation-text==1.0.0b1
-uuid
+azure-cognitiveservices-speech==1.33.0
+azure-core==1.29.5
+beautifulsoup4==4.12.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+Django==4.2.8
+django-bootstrap4==23.2
+django-forms-bootstrap==3.1.0
+django-storages==1.14.2
+filelock==3.13.1
+fonttools==4.46.0
+fsspec==2023.12.2
+huggingface-hub==0.19.4
+idna==3.6
+importlib-resources==6.1.1
+isodate==0.6.1
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+mpmath==1.3.0
+msrest==0.7.1
+networkx==3.2.1
+numpy==1.26.2
+oauthlib==3.2.2
+packaging==23.2
+pandas==2.1.4
+Pillow==10.1.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+safetensors==0.4.1
+sentencepiece==0.1.99
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.4.4
+sympy==1.12
+tokenizers==0.15.0
+torch==2.1.1
+tqdm==4.66.1
+transformers==4.36.0
+typing-extensions==4.9.0
+tzdata==2023.3
+urllib3==2.1.0
+whitenoise==6.6.0
+zipp==3.17.0
