--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ contourpy==1.2.0
 cycler==0.12.1
 Django==4.2.8
 django-bootstrap4==23.2
+django-cors-headers==4.3.1
 django-forms-bootstrap==3.1.0
 django-storages==1.14.2
 filelock==3.13.1
